Minor clean up in DevMojo